# To-Predict-or-Not-to-Predict

./: LICENSE  Makefile  README.md  methods-correlation.py  pyproject.toml  requirements.txt
configs/: english_mbert.yaml  evaluate_saved_model_uncertainty.yaml  example_config.yaml  rejection_fit.yaml  reporting_english_validation_mbert.yaml  smp_rejection_apply.yaml
data/: README.md
data/predictions/: bert-base-multilingual-cased_fold_0_val_predictions.csv  bert-base-multilingual-cased_fold_1_confusion_matrix.csv  bert-base-multilingual-cased_fold_1_val_predictions.csv  bert-base-multilingual-cased_fold_2_confusion_matrix.csv  bert-base-multilingual-cased_fold_2_val_predictions.csv  bert-base-multilingual-cased_fold_3_confusion_matrix.csv  bert-base-multilingual-cased_fold_3_val_predictions.csv  (+3 more)
docs/: adding_methods.md  configuration.md  data_format.md  methods.md  outputs.md  quickstart.md  reproducibility.md
notebooks/: README.md
scripts/: aggregate_results.py  analyze_metric_correlations.py  analyze_rejection_f1.py  build_train_pool_from_val.py  evaluate_saved_model_uncertainty.py  make_figures.py  make_report_outputs.py  make_tables.py  patch_plot_pdf_support.py  profile_sentence_iqr.py  run_folds.py  run_single_fold.py  smp_rejection_thresholds.py  summarise_rejection_by_coverage.py  summarise_rejection_curve.py  summarize_fold_metrics.py
tests/: test_config.py  test_config_utils.py  test_data_utils.py  test_label_mapping.py  test_metrics.py  test_model_utils.py  test_plot_utils.py  test_runner_config.py  test_table_utils.py  test_uncertainty_methods.py
(+52 files in other folders)
